# esp-idf-libssh

./: README.md
components/libssh/: CMakeLists.txt
components/libssh/compat/: config.h
